samples/_failures_safe/1761040559_577fa7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ac15a4e.c: In function ‘main’:
./samples/SAFE/__tmp_4ac15a4e.c:128:16: error: missing terminating " character
  128 |         printf("
      |                ^
./samples/SAFE/__tmp_4ac15a4e.c:128:9: error: expected expression at end of input
  128 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_4ac15a4e.c:128:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4ac15a4e.c:128:9: error: expected declaration or statement at end of input
